--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
     <div class="container text-success  myBackground">
       <h1 class="display-2">Bootsrap Grids</h1>
+
+
       <div class="row myCol">
         <div class="col-4 myBorder">
           <h2> Column1 </h2>
@@ -25,10 +27,17 @@
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            More information on location
+            </button>
+
         </div>
 
+
+
         <!-- Force next columns to break to new line -->
-        <div class="w-100"></div>
+        <div class="w-100">
+        </div>
 
 
 
@@ -58,6 +67,7 @@
                       <a href="#" class="btn btn-primary">See more</a>
                     </div>
                   </div>
+
                 </div> <!--column for cards end -->
 
 
