--- a/index.html
+++ b/index.html
@@ -8,67 +8,122 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
-    <title>Bootstrap</title>
+    <title>Ruby Lowry</title>
   </head>
   <body>
-    <div class="container text-success  myBackground">
-      <h1 class="display-2">Bootsrap Grids</h1>
 
-
-      <div class="row myCol">
-        <div class="col-4 myBorder">
-          <h2> Column1 </h2>
-          <img src="img/beach.jpg" class="img-fluid myImage" alt="Nature">
-        </div>
-
-        <div class="col-4 myBorder">
-          <h2> Column2 </h2>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            More information on location
-            </button>
-
-        </div>
-
-
-
-        <!-- Force next columns to break to new line -->
-        <div class="w-100">
-        </div>
-
-
-
-
-<!--Card from Bootstrap-->
-        <div class="col-md-3">
-          <div class="card mt-5" style="width: 18rem;">
-            <img src="img/room.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Bedroom Inspiration</h5>
-              <p class="card-text">Out of every space in a home, your bedroom is without a doubt the most personal. Even though it's an area many of your guests may never actually see, it still deserves a great deal of attention. It's where you recharge, reflect on the day, and even spend time reading a book, so it only makes sense for it to feature the right color palette and furnishings. And let’s not forget that it also has to showcase your design style accurately and complement the overall aesthetic that’s reflected in other areas of your home.</p>
-              <a href="#" class="btn btn-primary">See more</a>
-            </div>
+    <div class="container">
+      <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          <div class="col-4 pt-1">
+            <a class="text-muted" href='#'>Subscribe</a>
           </div>
-        </div> <!--column for cards end -->
+        <div class="col-4 text-center">
+          <a class="blog-header-logo text-dark" href='#'>RUBY LOWRY</a>
+        </div>
+        <div class="col-4 d-flex justify-content-end align-items-center">
+          <a class="text-muted" href='#'><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false">
+            <title>Search</title><circle cx="10.5" cy="10.5" r="7.5"></circle><path d="M21 21l-5.2-5.2"></path></svg>
+          </a>
+        <a class="btn btn-sm btn-outline-secondary" href='#'>Sign up</a>
+      </div>
+    </div>
+  </header>
+
+<div class="nav-scroller py-1 mb-2">
+  <nav class="nav d-flex justify-content-between">
+    <a class="p-2 text-muted" href='#'>Beaches</a>
+    <a class="p-2 text-muted" href='#'>Inspiration</a>
+    <a class="p-2 text-muted" href='#'>Blogposts</a>
+    <a class="p-2 text-muted" href='#'>Gallery</a>
+    <a class="p-2 text-muted" href='#'>Resources</a>
+  </nav>
+</div>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/cute-pot.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/painting.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/hotair.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/window.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/skygirl.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/coffee.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+  <div class="col-md-6 px-0">
+    <h1 class="display-4 font-italic">What is UX Design?</h1>
+    <p class="lead my-3">User experience design (UXD or UED) is the process of enhancing customer satisfaction and loyalty by improving the usability, ease of use,
+      and pleasure provided in the interaction between the customer and the product.</p>
+    <p class="lead mb-0">Continue reading...</p>
+</div>
+</div>
+
+<div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">World</strong>
+          <h3 class="mb-0">Featured post</h3>
+          <div class="mb-1 text-muted">Nov 12</div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <h3 class="mb-0">Post title</h3>
+          <div class="mb-1 text-muted">Nov 11</div>
+          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
-              <div class="col-md-3">
-        <!--Card from Bootstrap-->
 
-                  <div class="card mt-5" style="width: 18rem;">
-                    <img src="img/room.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Bedroom Inspiration</h5>
-                      <p class="card-text">Out of every space in a home, your bedroom is without a doubt the most personal. Even though it's an area many of your guests may never actually see, it still deserves a great deal of attention. It's where you recharge, reflect on the day, and even spend time reading a book, so it only makes sense for it to feature the right color palette and furnishings. And let’s not forget that it also has to showcase your design style accurately and complement the overall aesthetic that’s reflected in other areas of your home.</p>
-                      <a href="#" class="btn btn-primary">See more</a>
-                    </div>
-                  </div>
-
-                </div> <!--column for cards end -->
+  <footer class="blog-footer text-center">
+      <a href="#">Back to top</a>
+    </p>
+  </footer>
 
 
     </div> <!--row ends -->
